--- a/src/pages/quick-start.mdx
+++ b/src/pages/quick-start.mdx
@@ -50,6 +50,52 @@ import { Callout } from 'nextra/components';
   </script>
 </Head>
 
+<Callout type="warning">
+  <Callout type="info" emoji="🚀">
+    The latest model release (moondream2-2025-01-09) is currently only available via [Hugging Face](https://huggingface.co/vikhyatk/moondream2) and can be used with the Hugging Face Transformers library. We are actively working on integrating it into our client libraries.
+  </Callout>
+
+  ## Using Latest Moondream2 via Hugging Face
+
+  The latest version of Moondream2 can be used directly with Hugging Face Transformers:
+
+  ```python
+  from transformers import AutoModelForCausalLM, AutoTokenizer
+  from PIL import Image
+
+  model = AutoModelForCausalLM.from_pretrained(
+      "vikhyatk/moondream2",
+      revision="2025-01-09",
+      trust_remote_code=True,
+      # Uncomment to run on GPU.
+      # device_map={"": "cuda"}
+  )
+
+  # Captioning
+  print("Short caption:")
+  print(model.caption(image, length="short")["caption"])
+
+  print("\nNormal caption:")
+  for t in model.caption(image, length="normal", stream=True)["caption"]:
+      # Streaming generation example, supported for caption() and detect()
+      print(t, end="", flush=True)
+
+  # Visual Querying
+  print("\nVisual query: 'How many people are in the image?'")
+  print(model.query(image, "How many people are in the image?")["answer"])
+
+  # Object Detection
+  print("\nObject detection: 'face'")
+  objects = model.detect(image, "face")["objects"]
+  print(f"Found {len(objects)} face(s)")
+
+  # Pointing
+  print("\nPointing: 'person'")
+  points = model.point(image, "person")["points"]
+  print(f"Found {len(points)} person(s)")
+  ```
+</Callout>
+
 # Quick Start
 
 <ConfigSelector />
