gaze detection video demo

--- a/src/pages/recipes.mdx
+++ b/src/pages/recipes.mdx
@@ -34,7 +34,7 @@ import Recipe from '../components/Recipe';
 
 # Recipes
 
-Explore real-world examples and implementation patterns using Moondream.
+Explore real-world examples and implementation patterns using Moondream...
 
   <Recipe
     title="Gaze Detection Video Processor"
