--- a/src/pages/quick-start.mdx
+++ b/src/pages/quick-start.mdx
@@ -181,5 +181,5 @@ import { Callout } from 'nextra/components';
 </FaqDropdown>
 
 <FaqDropdown question='Can I use Moondream offline?'>
-  Yes! Check out our [local installation guide](#installation-options) for running Moondream without API calls. Note that local installations require more computational resources.
+  Yes! Check out the local quick start above to run Moondream without API calls. Note that local installations require more computational resources.
 </FaqDropdown>
