move transformers setup into advanced, card styling

--- a/src/pages/discover.mdx
+++ b/src/pages/discover.mdx
@@ -241,16 +241,16 @@ import FeatureCard from '../components/FeatureCard'
 
 Moondream provides a comprehensive set of visual understanding capabilities through a single, efficient model
 
-<div className="grid grid-cols-1 md:grid-cols-2 gap-6 mt-8">
+<div className="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-8">
   <div className="grid grid-cols-1 h-full">
     <FeatureCard
       icon="❓"
       title="Visual Question Answering"
       description="Ask natural questions about any image and receive detailed answers"
       features={[
-        "Extract specific information from visual content",
-        "Analyze complex scenes and relationships", 
-        "Understand context and details in images",
+        "Extract information from visual content",
+        "Analyze complex scenes", 
+        "Understand details in images",
         "Support interactive visual learning",
         "Enable visual data validation"
       ]}
@@ -266,7 +266,7 @@ Moondream provides a comprehensive set of visual understanding capabilities thro
       features={[
         "Create alt text for accessibility",
         "Generate search-optimized descriptions",
-        "Create image embeddings for similarity search",
+        "Create embeddings for similarity search",
         "Index visual content for search engines",
         "Generate metadata tags automatically"
       ]}
@@ -300,7 +300,6 @@ Moondream provides a comprehensive set of visual understanding capabilities thro
         "Support interactive visual applications",
         "Power precise object localization",
         "Create visual annotation tools",
-        "Enable region-based image analysis",
         "Support visual data validation"
       ]}
       href="/cloud/point"
@@ -372,7 +371,7 @@ The flexibility of VLMs means new use cases are constantly emerging as developer
 
 ## Getting Started
 
-<div className="grid grid-cols-1 md:grid-cols-2 gap-6 mt-8">
+<div className="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-8">
   <EndpointCard
     icon="📚"
     title="Explore Recipes"
