--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -47,7 +47,7 @@ Moondream is a tiny open-source vision AI that brings powerful image understandi
 
 Want to see Moondream in action? Try our [Interactive Playground](https://moondream.ai/playground) to experiment with different capabilities. Need help getting started? Join our [Discord community](https://discord.com/invite/tRUdpjDQfH) for support and discussions!
 
-<div className="grid grid-cols-1 md:grid-cols-2 gap-6 mt-8">
+<div className="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-8">
   <EndpointCard
     icon="🔍"
     title="Discover"
